--- a/MapView-UpdateCurrentLocation/Info.plist
+++ b/MapView-UpdateCurrentLocation/Info.plist
@@ -20,8 +20,14 @@
 	<string>1</string>
 	<key>LSRequiresIPhoneOS</key>
 	<true/>
+	<key>NSLocationAlwaysAndWhenInUseUsageDescription</key>
+	<string>App needs your location</string>
 	<key>NSLocationWhenInUseUsageDescription</key>
 	<string>App needs your location</string>
+	<key>UIBackgroundModes</key>
+	<array>
+		<string>location</string>
+	</array>
 	<key>UILaunchStoryboardName</key>
 	<string>LaunchScreen</string>
 	<key>UIMainStoryboardFile</key>
